Project1/src/objects/Salary_detaills__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <label>Bank Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic__c</fullName>
        <label>Basic</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CVV_number__c</fullName>
        <label>CVV number</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Credited_to__c</fullName>
        <label>Credited to</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Salary detaills</relationshipLabel>
        <relationshipName>Salary_detaills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gross_salary__c</fullName>
        <formula>Total_earnings__c  -  PF_deduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRA__c</fullName>
        <label>HRA</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mode_of_Payment__c</fullName>
        <description>Different modes of payment</description>
        <label>Mode of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>RTGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_deduction__c</fullName>
        <label>PF deduction</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary_Credit_Date__c</fullName>
        <label>Salary Credit Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_aalowance__c</fullName>
        <label>Special aalowance</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_earnings__c</fullName>
        <description>Total earnings</description>
        <formula>Basic__c  +  HRA__c  +  Special_aalowance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Salary detaill</label>
    <nameField>
        <displayFormat>SAL-{000000}</displayFormat>
        <label>Salary details ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salary detaills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VAL</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Credited_to__r.Is_Active__c  == False,TRUE,FALSE)</errorConditionFormula>
        <errorMessage>No generation of salary for inactive employees</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VAL1</fullName>
        <active>true</active>
        <description>The entered bank details is invalid.</description>
        <errorConditionFormula>IF( 
 LEN( Bank_Account_Number__c) == 0||  LEN(Bank_Details__c) == 0,TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
        <errorMessage>The entered bank details are invalid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VAL2</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
  LEN( Bank_Account_Number__c)  &gt; 16|| LEN(  Bank_Account_Number__c) &lt; 16,
TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
        <errorMessage>Invalid account number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VAL5</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
  LEN( Bank_Account_Number__c)  &gt; 16|| LEN(  Bank_Account_Number__c) &lt; 16,
TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
        <errorMessage>Invalid account number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VALDA1</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
  ISCHANGED(Bank_Details__c ) ||  ISCHANGED( Bank_Details__c ),TRUE,FALSE 



)</errorConditionFormula>
        <errorDisplayField>Bank_Details__c</errorDisplayField>
        <errorMessage>No updation allowed</errorMessage>
    </validationRules>
</CustomObject>